Fixed various memory leaks in prettytable, procman-app, sysinfo and util. https://bugzilla.gnome.org/show_bug.cgi?id=686812